src/objects/loan__Trailer_Segment_Definition__c.object
<CustomObject>
    <fields>
        <fullName>loan__Block_Count__c</fullName>
        <label>Block Count</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Header</label>
        <referenceTo>loan__CR_Org_Definition__c</referenceTo>
        <relationshipLabel>Trailer Segment Definitions</relationshipLabel>
        <relationshipName>Trailer_Segment_Definitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Record_Descriptor_Word__c</fullName>
        <defaultValue>&quot;0426&quot;</defaultValue>
        <label>Record Descriptor Word</label>
        <length>8</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Record_Identifier__c</fullName>
        <defaultValue>&quot;TRAILER&quot;</defaultValue>
        <label>Record Identifier</label>
        <length>14</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Reserved_1__c</fullName>
        <label>Reserved_1</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Reserved_2__c</fullName>
        <label>Reserved_2</label>
        <length>38</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Total_Base_Records__c</fullName>
        <label>Total Base Records</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Total_Change_Segments__c</fullName>
        <label>Total Change Segments</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Total_Dates_of_Birth_All__c</fullName>
        <label>Total Dates of Birth All</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Total_Dates_of_Birth_Base__c</fullName>
        <label>Total Dates of Birth Base</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Total_Dates_of_Birth_J1__c</fullName>
        <label>Total Dates of Birth J1</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Total_Dates_of_Birth_J2__c</fullName>
        <label>Total Dates of Birth J2</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Total_Employment_Segments__c</fullName>
        <label>Total Employment Segments</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Total_J1__c</fullName>
        <label>Total_J1</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Total_J2__c</fullName>
        <label>Total_J2</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Total_Mortgage_Information_Segments__c</fullName>
        <label>Total Mortgage Information Segments</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Total_Original_Creditor_Segments__c</fullName>
        <label>Total Original Creditor Segments</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Total_Purchased_Portfolio__c</fullName>
        <label>Total Purchased Portfolio</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Total_Social_Security_Numbers_All__c</fullName>
        <label>Total Social Security Numbers All</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Total_Social_Security_Numbers_Base__c</fullName>
        <label>Total Social Security Numbers Base</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Total_Social_Security_Numbers_J1__c</fullName>
        <label>Total Social Security Numbers J1</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Total_Social_Security_Numbers_J2__c</fullName>
        <label>Total Social Security Numbers J2</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Total_Specialized_Payment__c</fullName>
        <label>Total Specialized Payment</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Total_Telephone_Numbers_All__c</fullName>
        <label>Total Telephone Numbers All</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Total_of_ECOA_Code_Z__c</fullName>
        <label>Total of ECOA Code Z</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Total_of_Status_Code_05__c</fullName>
        <label>Total of Status Code 05</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>loan__Total_of_Status_Code_11__c</fullName>
        <label>Total of Status Code 11</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Total_of_Status_Code_13__c</fullName>
        <label>Total of Status Code 13</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Total_of_Status_Code_DA__c</fullName>
        <label>Total of Status Code DA</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Total_of_Status_Code_DF__c</fullName>
        <label>Total of Status Code DF</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Trailer Segment Definition</label>
    <nameField>
        <displayFormat>TSD-{00000000}</displayFormat>
        <label>Trailer Segment Definition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trailer Segment Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>